##Text encoding: utf-8

2018-01-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/3d/gchem3d.omf.in: fix licenses versions. [#52882]
	* docs/help/calc/gchemcalc.omf.in: ditto.
	* docs/help/crystal/gcrystal.omf.in: ditto.
	* docs/help/spectra/gspectrum.omf.in: ditto.
	* docs/help/table/gchemtable.omf.in: ditto.

2017-04-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/bonds/bondtool.cc: fix crash when changing settings.
	[#50799].

2017-03-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcugtk/message.cc: fix crash when the window is destroyed. [#50568]

2017-02-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.14.18).

2017-02-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: version bump (0.14.17).
	* libs/gcp/bond.cc: new properties for bonds crossing.
	* libs/gcu/objprops.h: ditto.
	* plugins/loaders/cdx/cdx.cc: fix import of generic fragments and crossing
	bonds. [50190]
	* plugins/loaders/cdxml/cdxml.cc: ditto.
	* programs/table/gchemtable.desktop.in.in: add missing line feed.

2016-12-06  Julian Sikorski  <belegdol@gmail.com>
	* programs/table/gchemtable.desktop.in.in: re-added missing newline (rhbz #1402039)

2016-11-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: version bump (0.14.16).
	* libs/gcp/application.cc: do not crash when a NULL tool is selected.
	* plugins/paint/bonds/plugin.cc: do not show unimplemented weak bond tool
	button.

2016-11-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: do not crash when a NULL tool is selected.

2016-11-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: do not crash when a NULL tool is selected.

2016-10-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: don't use the abs() function on unsigned numbers.
	* programs/3d/gchem3d.appdata.xml.in: updated.
	* programs/calc/gchemcalc.appdata.xml.in: updated.