@@ -352,7 +352,7 @@ if test "x$libspreadsheet" = x; then
   libspreadsheet=libspreadsheet-1.12
 fi
 
-PKG_CHECK_MODULES(gnumeric, [$libspreadsheet >= 1.11.6], [build_gnumeric_plugin=yes],
+PKG_CHECK_MODULES(gnumeric, [$libspreadsheet >= 1.12.42], [build_gnumeric_plugin=yes],
 		[build_gnumeric_plugin=no])
 dnl --without is not handled
 
