@@ -195,23 +195,23 @@ gnumeric_elementsymbol (GnmFuncEvalInfo *ei, GnmValue const * const *argv)
 const GnmFuncDescriptor Chemistry_functions[] = {
 
         { N_("molarmass"),       "s",
-			help_molarmass, gnumeric_molarmass, NULL, NULL, NULL,
+			help_molarmass, gnumeric_molarmass, NULL,
 			GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_NO_TESTSUITE},
         { N_("monoisotopicmass"),       "s",
-			help_monoisotopicmass, gnumeric_monoisotopicmass, NULL, NULL, NULL,
+			help_monoisotopicmass, gnumeric_monoisotopicmass, NULL,
 			GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_NO_TESTSUITE},
         { N_("chemcomposition"),       "ss",
-			help_chemcomposition, gnumeric_chemcomposition, NULL, NULL, NULL,
+			help_chemcomposition, gnumeric_chemcomposition, NULL,
 			GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_NO_TESTSUITE},
         { N_("elementnumber"),       "s",
-			help_elementnumber, gnumeric_elementnumber, NULL, NULL, NULL,
+			help_elementnumber, gnumeric_elementnumber, NULL,
 			GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_NO_TESTSUITE},
         { N_("elementsymbol"),       "f",
-			help_elementsymbol, gnumeric_elementsymbol, NULL, NULL, NULL,
+			help_elementsymbol, gnumeric_elementsymbol, NULL,
 			GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_NO_TESTSUITE},
 
 
-        {NULL, NULL, NULL, NULL, NULL, NULL, NULL,
+        {NULL, NULL, NULL, NULL, NULL,
 			GNM_FUNC_IS_PLACEHOLDER,  GNM_FUNC_IMPL_STATUS_UNIMPLEMENTED, GNM_FUNC_TEST_STATUS_NO_TESTSUITE}
 };
 
